--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<title>Book reader</title>
+<title>Book Reader</title>
 <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="icons/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="icons/favicon-16x16.png" sizes="16x16">
@@ -10,27 +10,37 @@
 <link rel="shortcut icon" href="icons/favicon.ico">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<script>
+if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installPackage)) {
+	navigator.serviceWorker.register('sw.js');
+}
+</script>
 <link rel="stylesheet" href="style.css">
+<script src="lib/async_storage.js"></script>
 </head><body>
 <div id="container">
 <p>
 <button>Open document</button>
+<label><input type="checkbox"> Keep document in local shelf</label>
 </p>
+<ul id="shelf"></ul>
 <p>
 <h2>FAQ</h2>
 <dl>
 <dt>How do I open a document?</dt>
-<dd>There are two ways: Either you start your file manager, open the document there and choose this app as viewer. Or you press the button above and choose an app to select the document from. You'll need a file picker app to do so, I recommend <a href="https://marketplace.firefox.com/app/finder" target="_blank">Finder</a>.</dd>
+<dd>There are two ways: Either you start your file manager, open the document there and choose this app as viewer. Or you press the button above and choose an app to select the document from. You'll need a file picker app to do so, I recommend <a href="https://marketplace.firefox.com/app/finder" target="_blank" rel="noopener">Finder</a>.</dd>
+<dt>What’s that local shelf?</dt>
+<dd>The local shelf helps you to store documents you want to read more than once. Just check the checkbox before opening, and the document will be put into the list, from where you can open it again. It will be stored as copy, so it will be available even if you delete the original, and can be removed from the list without deleting the original, but also wo’n’t update if the original changes.</dd>
 <dt>What formats are supported?</dt>
 <dd>You can open EPUB, PDF, Open Document (ODT for text, ODS for spreadsheets, ODP for presentations), and plain text files.</dd>
 <dt>How do I use the viewers?</dt>
 <dd>To view the documents this app includes different viewers that have been developed independendly. This means that each viewer will work a bit differently, but you will figure out how to navigate, zoom, etc.</dd>
 <dd>Note that the PDF viewer will show more tools when the screen is in landscape, and the ODF viewer shows its tools only after you tap the screen.</dd>
 <dt>Can I get the source?</dt>
-<dd>Yes! It is free software, you can download it from <a href="https://github.com/Schnark/docviewer" target="_blank">GitHub</a>, it is available under the <a href="http://www.gnu.org/licenses/agpl-3.0" target="_blank">AGPL</a> license and includes the following libraries:<ul>
-<li><a href="https://github.com/futurepress/epub.js" target="_blank">epub.js</a>, by FuturePress</li>
-<li><a href="https://github.com/mozilla/pdf.js" target="_blank">pdf.js</a>, by Mozilla Foundation</li>
-<li><a href="http://viewerjs.org/" target="_blank">viewerjs</a>, by KO GmbH</li>
+<dd>Yes! It is free software, you can download it from <a href="https://github.com/Schnark/docviewer" target="_blank" rel="noopener">GitHub</a>, it is available under the <a href="http://www.gnu.org/licenses/agpl-3.0" target="_blank" rel="noopener">AGPL</a> license and includes the following libraries:<ul>
+<li><a href="https://github.com/futurepress/epub.js" target="_blank" rel="noopener">epub.js</a>, by FuturePress</li>
+<li><a href="https://github.com/mozilla/pdf.js" target="_blank" rel="noopener">pdf.js</a>, by Mozilla Foundation</li>
+<li><a href="http://viewerjs.org/" target="_blank" rel="noopener">viewerjs</a>, by KO GmbH</li>
 </ul>
 This software is provided 'as-is', without any express or implied warranty.</dd>
 </dl>
