--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <dd>To view the documents this app includes different viewers that have been developed independendly. This means that each viewer will work a bit differently, but you will figure out how to navigate, zoom, etc.</dd>
 <dd>Note that the PDF viewer will show more tools when the screen is in landscape, and the ODF viewer shows its tools only after you tap the screen.</dd>
 <dt>Can I get the source?</dt>
-<dd>Yes! It is free software, you can download it from <a href="https://github.com/Schnark/docviewer" target="_blank" rel="noopener">GitHub</a>, it is available under the <a href="http://www.gnu.org/licenses/agpl-3.0" target="_blank" rel="noopener">AGPL</a> license and includes the following libraries:<ul>
+<dd>Yes! It is free software, you can download it from <a href="https://github.com/Schnark/docviewer" target="_blank" rel="noopener">GitHub</a>, it is available under the <a href="https://www.gnu.org/licenses/agpl-3.0" target="_blank" rel="noopener">AGPL</a> license and includes the following libraries:<ul>
 <li><a href="https://github.com/futurepress/epub.js" target="_blank" rel="noopener">epub.js</a>, by FuturePress</li>
 <li><a href="https://github.com/mozilla/pdf.js" target="_blank" rel="noopener">pdf.js</a>, by Mozilla Foundation</li>
 <li><a href="http://viewerjs.org/" target="_blank" rel="noopener">viewerjs</a>, by KO GmbH</li>
