allow saving files from shelf

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <dd>There are two ways: Either you start your file manager, open the document there and choose this app as viewer. Or you press the button above and choose an app to select the document from. You'll need a file picker app to do so, I recommend <a href="https://marketplace.firefox.com/app/finder" target="_blank" rel="noopener">Finder</a>.</dd>
 <dt>What’s that local shelf?</dt>
 <dd>The local shelf helps you to store documents you want to read more than once. Just check the checkbox before opening, and the document will be put into the list, from where you can open it again. It will be stored as copy, so it will be available even if you delete the original, and can be removed from the list without deleting the original, but also wo’n’t update if the original changes.</dd>
+<dd>If you deleted the original, you can save it from the shelf as file again. Note that the file will be stored among your downloads, and that you might have to rename it from an accidental temporary name, caused by a bug in Firefox OS.</dd>
 <dt>What formats are supported?</dt>
 <dd>You can open EPUB, PDF, Open Document (ODT for text, ODS for spreadsheets, ODP for presentations), and plain text files.</dd>
 <dt>How do I use the viewers?</dt>
