--- a/lib/txt/index.html
+++ b/lib/txt/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 <meta charset="uft-8">
+<meta name="viewport" content="width=device-width">
 <title>Text reader</title>
 <script>
 window.openUrl = function (url, title) {
